# Politics

./: CMakeLists.txt  README.md
inc/: House.hpp  House_of_Representatives.hpp  Politician.hpp  String_Helpers.hpp
src/: House.cpp  House_of_Representatives.cpp  ParseHTML.cpp  Politician.cpp
